--- a/public/chart_data/sample_data.csv/Automation.html
+++ b/public/chart_data/sample_data.csv/Automation.html
@@ -3,7 +3,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
   <link rel="stylesheet" id="typekit-css" href="https://use.typekit.net/mju7kpw.css?ver=4.9.8" type="text/css" media="all">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/polar.css">
+  <link rel="stylesheet" type="text/css" href="css/polar.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -12,10 +12,10 @@
   </a>
 
   <div class="navbar-nav">
-    <span class="nav-item">Client scorecard demo</span>
+    <span class="nav-item">CACA Demonstration Results</span>
   </div>
     <div class="navbar-nav">
-    <span class="nav-item small-nav-item"><a href='Overview.html'>Overview</a> - <a href='Automation.html'>Automation</a> - Version Control</span>
+    <span class="nav-item small-nav-item"><a href='Overview.html'>Overview</a> - Automation</span>
   </div>
 
 </nav>
@@ -30,16 +30,16 @@
 <div class='row chart_row'>
   <div class='col-lg-12'>
     <div class='chart'>
-      <canvas id="myChartAutomationVersionControl" width="800" height="580"></canvas>
+      <canvas id="myChartAutomation" width="800" height="580"></canvas>
     </div>
     <div class='overlay'>
-      <canvas id="myOverlayAutomationVersionControl" width="800" height="580"></canvas>
+      <canvas id="myOverlayAutomation" width="800" height="580"></canvas>
     </div>
     <div class='legend'>
-      <canvas id="legendAutomationVersionControl" width="900" height="580"></canvas>
+      <canvas id="legendAutomation" width="900" height="580"></canvas>
     </div>
     <div class='ticks'>
-      <canvas id="myTicksAutomationVersionControl" width="800" height="580"></canvas>
+      <canvas id="myTicksAutomation" width="800" height="580"></canvas>
     </div>
   </div>
 </div>
@@ -49,7 +49,7 @@
 <footer class="page-footer font-small pt-4">
 <!-- Copyright -->
 <div class="footer-copyright text-center py-3">
-  Prepared for Sample Client Inc. by Centric Consulting. <strong>* Client Confidential *</strong> © 2018 <a href="https://centricconsulting.com"> Centric Consulting</a>
+  Prepared for Demo Client LLC by sample_data.csv. <strong>* Client Confidential *</strong> © 2018 <a href="https://centricconsulting.com"> Centric Consulting</a>
 </div>
 <!-- Copyright -->
 
@@ -57,29 +57,29 @@
 <!-- <script> -->
 <!--     // Scripts for the overall chart -->
     <script>
-    var ctxAutomationVersionControl = document.getElementById("myChartAutomationVersionControl").getContext("2d");
-    var overlayCanvasAutomationVersionControl = document.getElementById("myOverlayAutomationVersionControl");
-    var overlayCtxAutomationVersionControl = overlayCanvasAutomationVersionControl.getContext("2d");
-    var ticksCtxAutomationVersionControl = document.getElementById("myTicksAutomationVersionControl").getContext("2d");
-    var legendCtxAutomationVersionControl = document.getElementById("legendAutomationVersionControl").getContext("2d");
+    var ctxAutomation = document.getElementById("myChartAutomation").getContext("2d");
+    var overlayCanvasAutomation = document.getElementById("myOverlayAutomation");
+    var overlayCtxAutomation = overlayCanvasAutomation.getContext("2d");
+    var ticksCtxAutomation = document.getElementById("myTicksAutomation").getContext("2d");
+    var legendCtxAutomation = document.getElementById("legendAutomation").getContext("2d");
 
 
     // This is the actual data being plotted.
     // The only relevant bits are the background colors and the data values
-    dataAutomationVersionControl = {
+    dataAutomation = {
         datasets: [
             {
                 label: "Score",
-                data: [1,3,2,2,4,1],
+                data: [2.1666666666666665,1.6666666666666667,2.0],
                 backgroundColor: ["#59B9EF","#B5D855","#FBC363","#81D8FD","#DE94D4","#F5D048","#90B9D1","#CDC5A5","#50BBCC","#D7DD46","#92ADFE"],
                 borderColor: ["#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000"
                 ]
             }
         ],
-        labels: ["Enforced Pre-commit validations","Feature Based Change Sets","Commit rollback on CI Failure","Branching/Merging Strategy","Integrated with Defect Management System","Integrated with Story Management System"],
-        true_values: [1,3,2,2,4,1]
+        labels: ["Version Control","Environment","Security/Audit"],
+        true_values: [2.1666666666666665,1.6666666666666667,2.0]
     };
-    optionsAutomationVersionControl = {
+    optionsAutomation = {
         scale: {
             display: false,
             gridLines: {
@@ -112,19 +112,19 @@
     };
 
     // This layer provides the legend
-    legendDataAutomationVersionControl = {
+    legendDataAutomation = {
         datasets: [
             {
                 label: "Score",
-                data: [0,0,0,0,0,0],
+                data: [0,0,0],
                 backgroundColor: ["#59B9EF","#B5D855","#FBC363","#81D8FD","#DE94D4","#F5D048","#90B9D1","#CDC5A5","#50BBCC","#D7DD46","#92ADFE"],
                 borderColor: ["rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)"]
             }
         ],
-        labels: ["Enforced Pre-commit validations","Feature Based Change Sets","Commit rollback on CI Failure","Branching/Merging Strategy","Integrated with Defect Management System","Integrated with Story Management System"],
-        true_values: [1,3,2,2,4,1]
+        labels: ["Version Control","Environment","Security/Audit"],
+        true_values: [2.1666666666666665,1.6666666666666667,2.0]
     };
-    legendOptionsAutomationVersionControl = {
+    legendOptionsAutomation = {
         animation: false,
         scale: {
             display: false
@@ -152,20 +152,20 @@
     // can show through.
     ///
     // this layer is drawn last.
-    overlayDataAutomationVersionControl = {
+    overlayDataAutomation = {
         datasets: [
             {
                 label: "Score",
-                data: [5,5,5,5,5,5],
+                data: [5,5,5],
                 backgroundColor: ["rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)"],
                 borderWidth: 3,
                 borderColor: ["#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000"],
             }
         ],
-        labels: ["Enforced Pre-commit validations","Feature Based Change Sets","Commit rollback on CI Failure","Branching/Merging Strategy","Integrated with Defect Management System","Integrated with Story Management System"],
-        true_values: [1,3,2,2,4,1]
+        labels: ["Version Control","Environment","Security/Audit"],
+        true_values: [2.1666666666666665,1.6666666666666667,2.0]
     };
-    overlayOptionsAutomationVersionControl = {
+    overlayOptionsAutomation = {
         animation: false,
         scale: {
             display: false
@@ -189,17 +189,17 @@
     // the overlay.  The data values are all set to zero so that we get tick
     // marks all the way to the center, even where there's data
     //
-    ticksDataAutomationVersionControl = {
+    ticksDataAutomation = {
         datasets: [
             {
                 label: "Score",
-                data: [0,0,0,0,0,0],
+                data: [0,0,0],
             }
         ],
-        labels: ["Enforced Pre-commit validations","Feature Based Change Sets","Commit rollback on CI Failure","Branching/Merging Strategy","Integrated with Defect Management System","Integrated with Story Management System"],
-        true_values: [1,3,2,2,4,1]
+        labels: ["Version Control","Environment","Security/Audit"],
+        true_values: [2.1666666666666665,1.6666666666666667,2.0]
     };
-    ticksOptionsAutomationVersionControl = {
+    ticksOptionsAutomation = {
         animation: false,
         scale: {
             display: true,
@@ -230,31 +230,38 @@
         }
     };
 
-    new Chart(ctxAutomationVersionControl, {
-        data: dataAutomationVersionControl,
+    new Chart(ctxAutomation, {
+        data: dataAutomation,
         type: "polarArea",
-        options: optionsAutomationVersionControl
+        options: optionsAutomation
     });
 
-    var overlayChartAutomationVersionControl = new Chart(overlayCtxAutomationVersionControl, {
-        data: overlayDataAutomationVersionControl,
+    var overlayChartAutomation = new Chart(overlayCtxAutomation, {
+        data: overlayDataAutomation,
         type: "polarArea",
-        options: overlayOptionsAutomationVersionControl
+        options: overlayOptionsAutomation
     });
 
-    new Chart(ticksCtxAutomationVersionControl, {
-        data: ticksDataAutomationVersionControl,
+    new Chart(ticksCtxAutomation, {
+        data: ticksDataAutomation,
         type: "polarArea",
-        options: ticksOptionsAutomationVersionControl
+        options: ticksOptionsAutomation
     });
 
-    new Chart(legendCtxAutomationVersionControl, {
-        data: legendDataAutomationVersionControl,
+    new Chart(legendCtxAutomation, {
+        data: legendDataAutomation,
         type: "polarArea",
-        options: legendOptionsAutomationVersionControl
+        options: legendOptionsAutomation
     });
 
 
+    
+    overlayCanvasAutomation.onclick = function (e) {
+        var slice = overlayChartAutomation.getElementAtEvent(e);
+        if (!slice.length) return; // return if not clicked on slice
+        var label = slice[0]._model.label.replace(/(-|\/|:| )/g, '');
+        window.location = "Automation" + label + ".html";
+    }
     
 
 </script>
