--- a/public/chart_data/sample_data.csv/AutomationSecurityAudit.html
+++ b/public/chart_data/sample_data.csv/AutomationSecurityAudit.html
@@ -3,7 +3,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
   <link rel="stylesheet" id="typekit-css" href="https://use.typekit.net/mju7kpw.css?ver=4.9.8" type="text/css" media="all">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/polar.css">
+  <link rel="stylesheet" type="text/css" href="css/polar.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -12,10 +12,10 @@
   </a>
 
   <div class="navbar-nav">
-    <span class="nav-item">Client scorecard demo</span>
+    <span class="nav-item">CACA Demonstration Results</span>
   </div>
     <div class="navbar-nav">
-    <span class="nav-item small-nav-item"><a href='Overview.html'>Overview</a> - Automation</span>
+    <span class="nav-item small-nav-item"><a href='Overview.html'>Overview</a> - <a href='Automation.html'>Automation</a> - Security/Audit</span>
   </div>
 
 </nav>
@@ -30,16 +30,16 @@
 <div class='row chart_row'>
   <div class='col-lg-12'>
     <div class='chart'>
-      <canvas id="myChartAutomation" width="800" height="580"></canvas>
+      <canvas id="myChartAutomationSecurityAudit" width="800" height="580"></canvas>
     </div>
     <div class='overlay'>
-      <canvas id="myOverlayAutomation" width="800" height="580"></canvas>
+      <canvas id="myOverlayAutomationSecurityAudit" width="800" height="580"></canvas>
     </div>
     <div class='legend'>
-      <canvas id="legendAutomation" width="900" height="580"></canvas>
+      <canvas id="legendAutomationSecurityAudit" width="900" height="580"></canvas>
     </div>
     <div class='ticks'>
-      <canvas id="myTicksAutomation" width="800" height="580"></canvas>
+      <canvas id="myTicksAutomationSecurityAudit" width="800" height="580"></canvas>
     </div>
   </div>
 </div>
@@ -49,7 +49,7 @@
 <footer class="page-footer font-small pt-4">
 <!-- Copyright -->
 <div class="footer-copyright text-center py-3">
-  Prepared for Sample Client Inc. by Centric Consulting. <strong>* Client Confidential *</strong> © 2018 <a href="https://centricconsulting.com"> Centric Consulting</a>
+  Prepared for Demo Client LLC by sample_data.csv. <strong>* Client Confidential *</strong> © 2018 <a href="https://centricconsulting.com"> Centric Consulting</a>
 </div>
 <!-- Copyright -->
 
@@ -57,29 +57,29 @@
 <!-- <script> -->
 <!--     // Scripts for the overall chart -->
     <script>
-    var ctxAutomation = document.getElementById("myChartAutomation").getContext("2d");
-    var overlayCanvasAutomation = document.getElementById("myOverlayAutomation");
-    var overlayCtxAutomation = overlayCanvasAutomation.getContext("2d");
-    var ticksCtxAutomation = document.getElementById("myTicksAutomation").getContext("2d");
-    var legendCtxAutomation = document.getElementById("legendAutomation").getContext("2d");
+    var ctxAutomationSecurityAudit = document.getElementById("myChartAutomationSecurityAudit").getContext("2d");
+    var overlayCanvasAutomationSecurityAudit = document.getElementById("myOverlayAutomationSecurityAudit");
+    var overlayCtxAutomationSecurityAudit = overlayCanvasAutomationSecurityAudit.getContext("2d");
+    var ticksCtxAutomationSecurityAudit = document.getElementById("myTicksAutomationSecurityAudit").getContext("2d");
+    var legendCtxAutomationSecurityAudit = document.getElementById("legendAutomationSecurityAudit").getContext("2d");
 
 
     // This is the actual data being plotted.
     // The only relevant bits are the background colors and the data values
-    dataAutomation = {
+    dataAutomationSecurityAudit = {
         datasets: [
             {
                 label: "Score",
-                data: [2.1666666666666665,1.6666666666666667,2.0],
+                data: [2,2,1,3,1,3,3,1],
                 backgroundColor: ["#59B9EF","#B5D855","#FBC363","#81D8FD","#DE94D4","#F5D048","#90B9D1","#CDC5A5","#50BBCC","#D7DD46","#92ADFE"],
                 borderColor: ["#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000"
                 ]
             }
         ],
-        labels: ["Version Control","Environment","Security/Audit"],
-        true_values: [2.1666666666666665,1.6666666666666667,2.0]
+        labels: ["Audit/Compliance","Pen Testing","Hostile Environment","Code Scanning","Build Scanning","Separation of Duties - Automation","Separation of Duties - Separate Accounts","Cryptographic Signing"],
+        true_values: [2,2,1,3,1,3,3,1]
     };
-    optionsAutomation = {
+    optionsAutomationSecurityAudit = {
         scale: {
             display: false,
             gridLines: {
@@ -112,19 +112,19 @@
     };
 
     // This layer provides the legend
-    legendDataAutomation = {
+    legendDataAutomationSecurityAudit = {
         datasets: [
             {
                 label: "Score",
-                data: [0,0,0],
+                data: [0,0,0,0,0,0,0,0],
                 backgroundColor: ["#59B9EF","#B5D855","#FBC363","#81D8FD","#DE94D4","#F5D048","#90B9D1","#CDC5A5","#50BBCC","#D7DD46","#92ADFE"],
                 borderColor: ["rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)"]
             }
         ],
-        labels: ["Version Control","Environment","Security/Audit"],
-        true_values: [2.1666666666666665,1.6666666666666667,2.0]
+        labels: ["Audit/Compliance","Pen Testing","Hostile Environment","Code Scanning","Build Scanning","Separation of Duties - Automation","Separation of Duties - Separate Accounts","Cryptographic Signing"],
+        true_values: [2,2,1,3,1,3,3,1]
     };
-    legendOptionsAutomation = {
+    legendOptionsAutomationSecurityAudit = {
         animation: false,
         scale: {
             display: false
@@ -152,20 +152,20 @@
     // can show through.
     ///
     // this layer is drawn last.
-    overlayDataAutomation = {
+    overlayDataAutomationSecurityAudit = {
         datasets: [
             {
                 label: "Score",
-                data: [5,5,5],
+                data: [5,5,5,5,5,5,5,5],
                 backgroundColor: ["rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)","rgba(255,0,0,0.0)"],
                 borderWidth: 3,
                 borderColor: ["#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000","#000000"],
             }
         ],
-        labels: ["Version Control","Environment","Security/Audit"],
-        true_values: [2.1666666666666665,1.6666666666666667,2.0]
+        labels: ["Audit/Compliance","Pen Testing","Hostile Environment","Code Scanning","Build Scanning","Separation of Duties - Automation","Separation of Duties - Separate Accounts","Cryptographic Signing"],
+        true_values: [2,2,1,3,1,3,3,1]
     };
-    overlayOptionsAutomation = {
+    overlayOptionsAutomationSecurityAudit = {
         animation: false,
         scale: {
             display: false
@@ -189,17 +189,17 @@
     // the overlay.  The data values are all set to zero so that we get tick
     // marks all the way to the center, even where there's data
     //
-    ticksDataAutomation = {
+    ticksDataAutomationSecurityAudit = {
         datasets: [
             {
                 label: "Score",
-                data: [0,0,0],
+                data: [0,0,0,0,0,0,0,0],
             }
         ],
-        labels: ["Version Control","Environment","Security/Audit"],
-        true_values: [2.1666666666666665,1.6666666666666667,2.0]
+        labels: ["Audit/Compliance","Pen Testing","Hostile Environment","Code Scanning","Build Scanning","Separation of Duties - Automation","Separation of Duties - Separate Accounts","Cryptographic Signing"],
+        true_values: [2,2,1,3,1,3,3,1]
     };
-    ticksOptionsAutomation = {
+    ticksOptionsAutomationSecurityAudit = {
         animation: false,
         scale: {
             display: true,
@@ -230,38 +230,31 @@
         }
     };
 
-    new Chart(ctxAutomation, {
-        data: dataAutomation,
+    new Chart(ctxAutomationSecurityAudit, {
+        data: dataAutomationSecurityAudit,
         type: "polarArea",
-        options: optionsAutomation
+        options: optionsAutomationSecurityAudit
     });
 
-    var overlayChartAutomation = new Chart(overlayCtxAutomation, {
-        data: overlayDataAutomation,
+    var overlayChartAutomationSecurityAudit = new Chart(overlayCtxAutomationSecurityAudit, {
+        data: overlayDataAutomationSecurityAudit,
         type: "polarArea",
-        options: overlayOptionsAutomation
+        options: overlayOptionsAutomationSecurityAudit
     });
 
-    new Chart(ticksCtxAutomation, {
-        data: ticksDataAutomation,
+    new Chart(ticksCtxAutomationSecurityAudit, {
+        data: ticksDataAutomationSecurityAudit,
         type: "polarArea",
-        options: ticksOptionsAutomation
+        options: ticksOptionsAutomationSecurityAudit
     });
 
-    new Chart(legendCtxAutomation, {
-        data: legendDataAutomation,
+    new Chart(legendCtxAutomationSecurityAudit, {
+        data: legendDataAutomationSecurityAudit,
         type: "polarArea",
-        options: legendOptionsAutomation
+        options: legendOptionsAutomationSecurityAudit
     });
 
 
-    
-    overlayCanvasAutomation.onclick = function (e) {
-        var slice = overlayChartAutomation.getElementAtEvent(e);
-        if (!slice.length) return; // return if not clicked on slice
-        var label = slice[0]._model.label.replace(/(-|\/|:| )/g, '');
-        window.location = "Automation" + label + ".html";
-    }
     
 
 </script>
